# Note: keep this file in wiki format for easy pasting to the proto-ch wiki

= GENI Clearinghouse and Portal Release Notes =

== 2.2 ==
  * Comment out call to error log in MA causing PHP warning (#790)
  * Change some mail links to help@geni.net (#572)
  * Find owning aggregate using sliver_id for manifest (#712)
  * Project admins are made admins of newly created slices (#559)
  * Email experimenters when they request to be a project lead (#760)
  * Use code format for sample .irodsEnv file (#744)
  * Be more careful checking XML when printing RSpec (#791)
  * Put a refresh button the sliver status page (#451)
  * Show something for ExoGENI hostnames in details page (#767)
  * Remove 2 more uses of slice-member.php (#328)

== 2.1 ==
  * Revise handling of Google Analytics (#742)
  * SSH public key from downloaded pair filename should end in .pub (#681)
  * Mark uploaded RSpecs as private by default (#421)
  * Handle malformed XML in RSpec upload (#720)
  * Remove unnecessary host reference (#755)
  * Output account request passwords in monospace font (#732)
  * Show project page to members only (#727)
  * Remove hardcoded hostnames in openid configuration (#287)
  * Update the supported gcf release to 2.2.1-threaded-ticket313 (#746)
  * Add new GPO development hosts to utility scripts (#745)
  * Allow case-insensitive upload of member email addresses (#713)
  * Fix sliver status page (resource status) (#429)
  * Update portal to gcf 2.4 (#392)
  * Remove custom pgch and use standard version from gcf (#347)
  * Ensure that only leads and admins can edit slice membership (#533)
  * Update member lookup by EPPN for new CH API (no ticket)
  * Make order of aggregates consistent (#478)
  * Fix redirect to InCommon Federated Error Handler (#778)
  * Update aggregate location data for map (#780)
  * Add additional validation checks to RSpec upload (#781)
  * Add additional aggregates for internal testing (#779)