@@ -49,6 +49,9 @@ $portal_private_key_file = '/usr/share/geni-ch/portal/portal-key.pem';
 // set to match the current GENI CH SA
 $portal_max_slice_renewal_days = 185;
 
+// Portal version
+$portal_version = "2.1";
+
 //----------------------------------------------------------------------
 // Set error level to include user errors (generated by the portal).
 //----------------------------------------------------------------------
